--- a/i3/config
+++ b/i3/config
@@ -13,7 +13,11 @@ set $mod Mod4
 
 # Font for window titles. Will also be used by the bar unless a different font
 # is used in the bar {} block below.
-font pango:monospace 10
+font pango: Iosevka 12
+# You can also use any non-zero value if you'd like to have a border
+# for_window [class=".*"] border pixel 2
+
+gaps inner 5
 
 # This font is widely installed, provides lots of unicode glyphs, right-to-left
 # text rendering and scalability on retina/hidpi displays (thanks to pango).
@@ -32,7 +36,7 @@ exec --no-startup-id xss-lock --transfer-sleep-lock -- i3lock --nofork
 
 # NetworkManager is the most popular way to manage wireless networks on Linux,
 # and nm-applet is a desktop environment-independent system tray GUI for it.
-exec --no-startup-id nm-applet
+exec --no-startup-id /home/${USER}/.config/autostart.sh
 
 # exec --no-startup-id picom --no-fading-openclose --fade-in-step=1 --fade-out-step=1 --fade-delta=0
 
@@ -47,13 +51,13 @@ bindsym XF86AudioMicMute exec --no-startup-id pactl set-source-mute @DEFAULT_SOU
 floating_modifier $mod
 
 # start a terminal
-bindsym $mod+Return exec i3-sensible-terminal
+bindsym $mod+Shift+Return exec kitty
 
 # kill focused window
 bindsym $mod+Shift+c kill
 
-# start dmenu (a program launcher)
-bindsym $mod+p exec --no-startup-id dmenu_run
+# start dmenu (a program launcher)ll
+bindsym $mod+p exec --no-startup-id dmenu_run -fn "Iosevka:size=14"
 # A more modern dmenu replacement is rofi:
 # bindcode $mod+40 exec "rofi -modi drun,run -show drun"
 # There also is i3-dmenu-desktop which only displays applications shipping a
@@ -71,6 +75,7 @@ bindsym $mod+Shift+h move left
 bindsym $mod+Shift+j move down
 bindsym $mod+Shift+k move up
 bindsym $mod+Shift+l move right
+
 
 # split in horizontal orientation
 bindsym $mod+i split h
@@ -137,7 +142,7 @@ bindsym $mod+Shift+0 move container to workspace number $ws10
 
 # custom
 bindsym $mod+Shift+b exec firefox
-bindsym $mod+Shift+e exec i3-sensible-terminal -e nnn -t nnn
+bindsym $mod+Shift+e exec kitty -e nnn
 
 # reload the configuration file
 bindsym $mod+r reload
@@ -158,5 +163,22 @@ bindsym $mod+Right resize grow width 10 px or 10 ppt
 # Start i3bar to display a workspace bar (plus the system information i3status
 # finds out, if available)
 bar {
-        status_command i3status
+    status_command    i3status
+    position          top
+    workspace_buttons yes
+    tray_output       primary
+	tray_padding 	  0
+	workspace_buttons yes
+	strip_workspace_numbers no
+	strip_workspace_name yes
+
+    colors {
+        background #222222
+        statusline #dddddd
+
+        focused_workspace  #ffffff #285577
+        active_workspace   #ffffff #333333
+        inactive_workspace #888888 #222222
+        urgent_workspace   #ffffff #900000
+    }
 }
